--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,31 @@
-
-
-<!-- Allow the app to use the routes from `app.module.ts` -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" routerLink="/">Home Page</a>
+  <button class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/residents">Residents</a>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/Business">Bussiness</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/employees">Employees</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 <router-outlet></router-outlet>
 
+<br><br><br>
+<div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+  © 2022 Copyright:
+  <a class="text-reset fw-bold" target="_blank" href="https://www.linkedin.com/in/shirfeld/">Shir feldman</a>
+</div>
