--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/residents">Residents</a>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/Business">Bussiness</a>
+        <a class="nav-link" routerLink="/Business">Business</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/employees">Employees</a>
