--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -4,7 +4,7 @@
 
 <div class="text-center d-flex flex-column" style="display: inline-block">
   <div>
-    <h1 class="title" >Oranit the best place to live</h1>
+    <h1 class="title" >Oranit is the best place to live</h1>
     
     <p class="lead" style="width: 50%; margin: auto">
       Oranit is a community in the status of a local council, located in the 
