--- a/src/app/Residents/resident-details/resident-details.component.html
+++ b/src/app/Residents/resident-details/resident-details.component.html
@@ -1,6 +1,7 @@
 <div class="container">
         <div *ngIf="resident | async as resident">
-            <h2 >Resident details : {{ resident.Name }} </h2>
+            <br><br>
+            <h2 style="  text-decoration: underline;" >Resident details : {{ resident.Name }} </h2>
             <br>
 
             <p > ID: {{ resident.Id }}</p>
