--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -4,6 +4,11 @@
     border-radius: 100px;
     margin-top: 100px;
     margin-bottom: 100px;
+
+    @media screen and(max-width : 400px) {
+        width:90% ;
+        height: 100%;
+    }
 }
 
 .title{
@@ -13,4 +18,7 @@
                  font-family:  fantasy;
                  font-size:100px;
                  margin: 50px;
+                 @media screen and(max-width : 400px) {
+                    font-size: 40px;
+                }
 }
